--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-
+    
 }
 
 .container{
@@ -46,7 +46,7 @@
     width: 20%;
     margin: 0 auto;
     margin-bottom: 12px;
-    border-color: rgb(47, 154, 186);
+    border-color: rgb(59, 201, 177);
 }
 .btn{
     background-color: transparent;
@@ -94,4 +94,71 @@ i{
     text-align: center;
     gap: 50px;
     margin-bottom: 60px;
+}
+.main_div{
+    background-color: rgb(238, 233, 229);
+}
+.title h3{
+    text-align: center;
+    padding: 20px;
+}
+
+.image{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    
+}
+.img_wrapper{
+    position: relative;
+}
+
+/* .img_wrapper::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgb(71, 226, 226);
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.5s;
+    overflow: hidden;
+}
+
+.img_wrapper:hover::after{
+    
+    opacity: .7;
+    visibility: visible;
+    cursor: pointer;
+} */
+
+.icon_wrapper{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    top: 0;
+    left: 0; 
+    background-color: rgb(71, 226, 226);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .5s;
+   
+}
+.icon_wrapper i{
+    border: 1px solid #fff;
+    padding: 8px 12px;
+    color: white;
+}
+
+.img_wrapper:hover .icon_wrapper{
+    opacity: .8;
+    visibility: visible;
+    cursor: pointer;
 }
